--- a/manifest.json
+++ b/manifest.json
@@ -4,32 +4,32 @@
 	"icons":[
 		{
 			"src":"",
-			"type":"",
-			"sizes":""
+			"type":"image/png",
+			"sizes":"48x48"
 
 		},
 		{
 			"src":"",
-			"type":"",
-			"sizes":""
+			"type":"image/png",
+			"sizes":"144x144"
 
 		},
 		{
 			"src":"",
-			"type":"",
-			"sizes":""
+			"type":"image/png",
+			"sizes":"192x192"
 
 		},
 		{
 			"src":"",
-			"type":"",
-			"sizes":""
+			"type":"image/png",
+			"sizes":"256x256"
 
 		},
 		{
 			"src":"",
-			"type":"",
-			"sizes":""
+			"type":"image/png",
+			"sizes":"384x384"
 
 		},		
 	],
